chore: Rename default branch main -> master
Unfortunately Gitbook has a hard-link to the master branch, so we cannot use `main` as the default branch name

--- a/.github/workflows/deploy-es.yml
+++ b/.github/workflows/deploy-es.yml
@@ -5,10 +5,10 @@ env:
 
 name: Spanish [ES] Translations
 
-# Runs on push to main, only when files under `docs/es` are modified
+# Runs on push to master, only when files under `docs/es` are modified
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       # **CHANGE THIS** for other languages
       - 'translations/es/**'
